Fix style for i18n error align issue

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -851,7 +851,6 @@ body {
     height: 40px;
     label{
       display: inline;
-      margin: auto;
     }
   }
   .password_suggestion{
